refactor, вынес токен

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "dotenv": "^16.0.3",
     "node-telegram-bot-api": "^0.56.0",
     "nodemon": "^2.0.15"
   }
